adding handlebars custom helper

--- a/public/stylesheets/shift.css
+++ b/public/stylesheets/shift.css
@@ -90,9 +90,13 @@ body {
   line-height: 1.5;
 }
 
-body {
+/* body {
   background-image: url(../images/3840x2160-cool-black-solid-color-background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+} */
+
+.green {
+  color: green;
 }
