--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-md-12">
-      <h2 class="text-center mb-5">Welcome to waiter app </h2>
+      <h2 style="color: rgba(255, 146, 4, 0.822);" class="text-center mb-5">Welcome to waiter app </h2>
       <div class="row">
         <div class="col-md-6 mx-auto">
           <div class="card border-secondary">
