--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -10,8 +10,7 @@
     <title>Document</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/offcanvas/">
 
-    <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -28,81 +27,76 @@
             }
         }
     </style>
-
     <link rel="stylesheet" href="/stylesheets/shift.css">
 </head>
 
 <body>
     <div class="container bg-faded">
-        <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center">Welcome <span
-                style="color: rgb(255, 60, 0);">{{name}}</span></h1>
+        <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center">Welcome <span style="color: rgb(132, 0, 255);">Administrator</span></h1>
         <div class="row">
         </div>
-        <hr>
         <form action="/add_shift" method="POST">
             <div class="row">
                 <div class="col">
                     <div class="mx-auto w-50 p-3 bg-dark-gray text-white text-center">
                         <div class="input-group flex-nowrap">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="addon-wrapping"><img
-                                        src="https://img.icons8.com/office/24/000000/waiter.png"></span>
                             </div>
-                            <input type="text" name="waiter" value="{{name}}" class="form-control"
-                                placeholder="Waiter name" aria-label="Username" aria-describedby="addon-wrapping"
-                                required>
                         </div>
                     </div>
                 </div>
             </div>
-            {{!-- <hr> --}}
             <div class="row">
                 <div class="col-12">
                     <div class="justify-content-center text-center">
                         {{#check_box}}
                         <div class="custom-control custom-checkbox custom-control-inline ">
                             <input type="checkbox" name="day" value="{{days_in_a_week}}" class="custom-control-input"
-                                id="{{element_id}}" disabled>
-                            <label style="color: rgba(255, 146, 4, 0.822);" class="custom-control-label"
-                                for="{{element_id}}">{{days_in_a_week}}</label>
+                                id="{{element_id}}">
+                            <label class="custom-control-label" for="{{element_id}}">{{days_in_a_week}}</label>
                         </div>
                         {{/check_box}}
                     </div>
                 </div>
             </div>
-            <hr>
             <div class="row">
-                <div class="col-4 mx-auto text-center">
+                {{!-- <div class="col-4 mx-auto text-center">
                     <button type="submit" class="btn btn-dark text-center">Update shift</button>
-                </div>
+                </div> --}}
                 <div class="col-4 mx-auto text-center">
                     <a href="/login"><button type="button" class="btn btn-success text-center">Log out</button></a>
                 </div>
+
         </form>
-        {{error.message}}
     </div>
     <form action="/filter" method="POST">
         <main role="main" class="container">
-            <div class="my-3 p-3  rounded shadow-sm ">
-                <h6 style="color: rgba(255, 146, 4, 0.822);" class="border-bottom border-gray pb-2 mb-0"><span
-                        style="color: rgb(255, 60, 0);">{{name}}'</span>(s)working shifts</h6>
-                {{#each Waiter}}
+            <div class="my-3 p-3 rounded shadow-sm ">
+                <a href="/delete"> <button type="button" class="btn btn-light text-center"><i class="fa fa-trash" aria-hidden="true"></i>Remove waiters</button></a>
+                <h6 style="color: rgba(255, 146, 4, 0.822);" class="border-bottom border-gray pb-2 mb-0">Waiters working days</h6>
+                {{#each days}}
                 <div class="media text-muted pt-3">
                     <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32"
-                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                        role="img" aria-label="Placeholder: 32x32">
+                        xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
+                        aria-label="Placeholder: 32x32">
                         <title>Placeholder</title>
                         <rect class="green" width="100%" height="100%" fill="{{{status}}}" />
                     </svg>
                     <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block"><i class="fa fa-calendar"></i>
-                            {{days_in_a_week}}</strong>
-                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Waiters: <span
-                                style="color: rgba(255, 146, 4, 0.822);">{{days_count}}</span></strong>
-                        {{#waiters}}
-                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Name: <span
-                                style="color:rgb(255, 60, 0);">{{this}}</span></strong>
-                        {{/waiters}}
+                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block"><i class="fa fa-calendar"></i>{{days_in_a_week}}</strong>
+                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Waiters: <span style="color: rgba(255, 146, 4, 0.822);">{{days_count}}</span></strong>
+                        {{#each waiters}}
+                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Name: <a href="/remove/{{this}}"><span style="color:rgb(255, 60, 0);"> {{this}}   <i style="color: darkorange;" class="fas fa-user-times"></i></span></a></strong>
+                        {{/each}}
+                        <small class="d-block text-center mt-3">
+
+                            
+                            {{!-- <a href="/"> <button class="btn btn-success"><i class="fa fa-spinner fa-spin"></i>
+                                    Update</button></a> --}}
+
+                            {{!-- <button class="btn btn-warning" name="waiters" value="{{id}}" type="submit"><i
+                                    class="fas fa-eye"></i>
+                                Waiters</button> --}}
                         </small>
                     </p>
                 </div>
