--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Log in</title>
+    <link rel="stylesheet" href="/stylesheets/shift.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     </span> --}}
 
 
-    <h1 class="text-center mt-5">Waiter</h1>
+    <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center mt-5">Waiter</h1>
     <div class="container pt-3">
         <div class="row justify-content-sm-center">
             <div class="col-sm-10 col-md-6">
@@ -34,7 +35,7 @@
                                         <input type="checkbox" value="remember-me">
                                         Remember me
                                     </label> --}}
-                                    <a href="#" class="float-right">Need help?</a>
+                                    <a href="/" class="float-right">Not yet registered?</a>
                                 </form>
                             </div>
                         </div>
