--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,7 +62,7 @@
                         {{#check_box}}
                         <div class="custom-control custom-checkbox custom-control-inline ">
                             <input type="checkbox" name="day" value="{{days_in_a_week}}" class="custom-control-input"
-                                id="{{element_id}}" disabled>
+                                id="{{element_id}}">
                             <label style="color: rgba(255, 146, 4, 0.822);" class="custom-control-label"
                                 for="{{element_id}}">{{days_in_a_week}}</label>
                         </div>
