--- a/public/stylesheets/shift.css
+++ b/public/stylesheets/shift.css
@@ -94,7 +94,7 @@ body,
 html {
   background-image: url(../images/wood.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   /* background-position: center; */
 }
 
