--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -72,7 +72,7 @@
     <form action="/filter" method="POST">
         <main role="main" class="container">
             <div class="my-3 p-3 rounded shadow-sm ">
-                <a href="/delete"> <button type="button" class="btn btn-light text-center"><i class="fa fa-trash" aria-hidden="true"></i>Remove waiters</button></a>
+                <a href="/remove" onclick="return confirm('Are you sure you want to remove all the waiter in the database?')"><button  type="button" class="btn btn-light text-center"><i class="fa fa-trash" aria-hidden="true"></i>Remove waiters</button></a>
                 <h6 style="color: rgba(255, 146, 4, 0.822);" class="border-bottom border-gray pb-2 mb-0">Waiters working days</h6>
                 {{#each days}}
                 <div class="media text-muted pt-3">
@@ -86,7 +86,7 @@
                         <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block"><i class="fa fa-calendar"></i>{{days_in_a_week}}</strong>
                         <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Waiters: <span style="color: rgba(255, 146, 4, 0.822);">{{days_count}}</span></strong>
                         {{#each waiters}}
-                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Name: <a href="/remove/{{this}}"><span style="color:rgb(255, 60, 0);"> {{this}}   <i style="color: darkorange;" class="fas fa-user-times"></i></span></a></strong>
+                        <strong style="color: rgba(255, 146, 4, 0.822);" class="d-block">Name: <a onclick="return confirm('Are you sure you want to remove this waiter?')" href="/remove/{{this}}"><span> {{this}}   <i style="color: darkorange;" class="fas fa-user-times"></i></span></a></strong>
                         {{/each}}
                         <small class="d-block text-center mt-3">
 
