--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
 
 <body>
     <div class="container bg-faded">
-        <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center">Welcome <span
+        <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center">Welcome waiter <span
                 style="color: rgb(255, 60, 0);">{{name}}</span></h1>
         <div class="row">
         </div>
@@ -61,7 +61,7 @@
                     <div class="justify-content-center text-center">
                         {{#check_box}}
                         <div class="custom-control custom-checkbox custom-control-inline ">
-                            <input type="checkbox" name="day" value="{{days_in_a_week}}" class="custom-control-input"
+                            <input {{state}} type="checkbox" name="day" value="{{days_in_a_week}}" class="custom-control-input"
                                 id="{{element_id}}">
                             <label style="color: rgba(255, 146, 4, 0.822);" class="custom-control-label"
                                 for="{{element_id}}">{{days_in_a_week}}</label>
