now waiters can select one day to work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,9 +33,12 @@
 </head>
 
 <body>
+
     <div class="container bg-faded">
         <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center">Welcome waiter <span
                 style="color: rgb(255, 60, 0);">{{name}}</span></h1>
+        <h5 style="color: rgb(255, 4, 4);" class="text-center mt-5">{{messages.info}}</h5>
+        <h5 style="color: rgb(0, 255, 0);" class="text-center mt-5">{{messages.success}}</h5>
         <div class="row">
         </div>
         <hr>
