--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,7 +28,7 @@
                                     <input type="text" class="form-control mb-2" name="username" onkeyup="this.value = this.value.charAt(0).toUpperCase() + this.value.slice(1).toLowerCase()" placeholder="Waiter name" required autofocus>
                                     <input type="password" class="form-control mb-2" name="passcode" placeholder="Password" required>
                                     <button class="btn btn-lg btn-primary btn-block mb-1" type="submit">Sign in</button>
-                                    <a href="/" class="float-right">Not yet registered?</a>
+                                    <a href="/signup" class="float-right">Not yet registered?</a>
                                 </form>
                             </div>
                         </div>
