--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -47,7 +47,7 @@
       <!--/col-->
     </div>
     <!--/row-->
-    <a href="/login" class="justify-content-between"><span style="color: rgb(0, 38, 255);">Already have account? sign
+    <a href="/" class="justify-content-between"><span style="color: rgb(0, 38, 255);">Already have account? sign
         in</span></a>
   </div>
 
