--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -35,7 +35,9 @@
     <div class="container bg-faded">
         <h1 style="color: rgba(255, 146, 4, 0.822);" class="text-center">Welcome <span
                 style="color: rgb(132, 0, 255);">Administrator</span></h1>
+        <h5 style="color: rgb(0, 255, 0);" class="text-center mt-5">{{messages.success}}</h5>
         <div class="row">
+
         </div>
         <form action="/add_shift" method="POST">
             <div class="row">
